logs/Slang/generated/hdlconv/hdlconvertor_p125.sv.log
name: hdlconvertor_p125
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p125.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p125.sv:3:1: error: expected member
specify
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p125.sv:5:2: error: expected member
	specparam tRise_control = 40, tFall_control = 50;
	^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p125.sv:6:1: error: expected member
endspecify
^~~~~~~~~~
